// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`spin demo > renders _semantic correctly 1`] = `
<div
  class="semantic-preview-container"
  data-v-dfc8ebef=""
>
  <div
    class="ant-row css-var-root semantic-preview-row"
    data-v-dfc8ebef=""
  >
    <div
      class="ant-col ant-col-16 css-var-root semantic-preview-col"
      data-v-dfc8ebef=""
    >
      <div
        style="position: relative; width: 500px; height: 100px; display: flex; align-items: center; justify-content: center;"
      >
        <div
          aria-busy="true"
          aria-live="polite"
          class="ant-spin ant-spin-spinning semantic-mark-root ant-spin-section css-var-v-0"
        >
          <span
            class="semantic-mark-indicator ant-spin-dot-holder"
          >
            <span
              class="ant-spin-dot ant-spin-dot-spin"
            >
              <i
                class="ant-spin-dot-item"
              />
              <i
                class="ant-spin-dot-item"
              />
              <i
                class="ant-spin-dot-item"
              />
              <i
                class="ant-spin-dot-item"
              />
            </span>
          </span>
          <!---->
          <!---->
          <!---->
        </div>
      </div>
    </div>
    <div
      class="ant-col ant-col-8 css-var-root"
      data-v-dfc8ebef=""
    >
      <ul
        class="semantic-list"
        data-v-dfc8ebef=""
      >
        <li
          class="semantic-list-item"
          data-v-dfc8ebef=""
        >
          <div
            class="ant-flex css-var-root ant-flex-align-stretch ant-flex-gap-small ant-flex-vertical"
            data-v-dfc8ebef=""
          >
            <div
              class="ant-flex css-var-root ant-flex-align-center ant-flex-justify-space-between ant-flex-gap-small"
              data-v-dfc8ebef=""
            >
              <!-- Title + Version -->
              <div
                class="ant-flex css-var-root ant-flex-align-center ant-flex-gap-small"
                data-v-dfc8ebef=""
              >
                <h5
                  class="ant-typography css-var-root"
                  style="margin: 0px;"
                >
                  root
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                </h5>
                <span
                  class="ant-tag ant-tag-filled ant-tag-blue css-var-root"
                  data-v-dfc8ebef=""
                >
                  1.0.0
                  <!---->
                  <!---->
                  <!---->
                </span>
              </div>
              <!-- Pin + Sample -->
              <div
                class="ant-flex css-var-root ant-flex-align-center ant-flex-gap-small"
                data-v-dfc8ebef=""
              >
                <button
                  class="ant-btn css-var-root ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-sm ant-btn-icon-only"
                  data-v-dfc8ebef=""
                  type="button"
                >
                  <span
                    class="ant-btn-icon"
                  >
                    <span
                      aria-label="pushpin"
                      class="anticon anticon-pushpin"
                      data-v-dfc8ebef=""
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="pushpin"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M878.3 392.1L631.9 145.7c-6.5-6.5-15-9.7-23.5-9.7s-17 3.2-23.5 9.7L423.8 306.9c-12.2-1.4-24.5-2-36.8-2-73.2 0-146.4 24.1-206.5 72.3a33.23 33.23 0 00-2.7 49.4l181.7 181.7-215.4 215.2a15.8 15.8 0 00-4.6 9.8l-3.4 37.2c-.9 9.4 6.6 17.4 15.9 17.4.5 0 1 0 1.5-.1l37.2-3.4c3.7-.3 7.2-2 9.8-4.6l215.4-215.4 181.7 181.7c6.5 6.5 15 9.7 23.5 9.7 9.7 0 19.3-4.2 25.9-12.4 56.3-70.3 79.7-158.3 70.2-243.4l161.1-161.1c12.9-12.8 12.9-33.8 0-46.8zM666.2 549.3l-24.5 24.5 3.8 34.4a259.92 259.92 0 01-30.4 153.9L262 408.8c12.9-7.1 26.3-13.1 40.3-17.9 27.2-9.4 55.7-14.1 84.7-14.1 9.6 0 19.3.5 28.9 1.6l34.4 3.8 24.5-24.5L608.5 224 800 415.5 666.2 549.3z"
                        />
                      </svg>
                    </span>
                  </span>
                  <!---->
                  <!---->
                </button>
                <button
                  class="ant-btn css-var-root ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-sm ant-btn-icon-only"
                  data-v-dfc8ebef=""
                  type="button"
                >
                  <span
                    class="ant-btn-icon"
                  >
                    <span
                      aria-label="info-circle"
                      class="anticon anticon-info-circle"
                      data-v-dfc8ebef=""
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="info-circle"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                        />
                        <path
                          d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
                        />
                      </svg>
                    </span>
                  </span>
                  <!---->
                  <!---->
                </button>
                <!---->
              </div>
            </div>
            <div
              class="ant-typography css-var-root"
              style="margin: 0px; font-size: 12px;"
            >
              Root element with absolute positioning, display control, color, font size, text alignment, vertical alignment, opacity and transition animation (effective when fullscreen is false)
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
            </div>
          </div>
        </li>
        <li
          class="semantic-list-item"
          data-v-dfc8ebef=""
        >
          <div
            class="ant-flex css-var-root ant-flex-align-stretch ant-flex-gap-small ant-flex-vertical"
            data-v-dfc8ebef=""
          >
            <div
              class="ant-flex css-var-root ant-flex-align-center ant-flex-justify-space-between ant-flex-gap-small"
              data-v-dfc8ebef=""
            >
              <!-- Title + Version -->
              <div
                class="ant-flex css-var-root ant-flex-align-center ant-flex-gap-small"
                data-v-dfc8ebef=""
              >
                <h5
                  class="ant-typography css-var-root"
                  style="margin: 0px;"
                >
                  indicator
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                </h5>
                <span
                  class="ant-tag ant-tag-filled ant-tag-blue css-var-root"
                  data-v-dfc8ebef=""
                >
                  1.0.0
                  <!---->
                  <!---->
                  <!---->
                </span>
              </div>
              <!-- Pin + Sample -->
              <div
                class="ant-flex css-var-root ant-flex-align-center ant-flex-gap-small"
                data-v-dfc8ebef=""
              >
                <button
                  class="ant-btn css-var-root ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-sm ant-btn-icon-only"
                  data-v-dfc8ebef=""
                  type="button"
                >
                  <span
                    class="ant-btn-icon"
                  >
                    <span
                      aria-label="pushpin"
                      class="anticon anticon-pushpin"
                      data-v-dfc8ebef=""
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="pushpin"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M878.3 392.1L631.9 145.7c-6.5-6.5-15-9.7-23.5-9.7s-17 3.2-23.5 9.7L423.8 306.9c-12.2-1.4-24.5-2-36.8-2-73.2 0-146.4 24.1-206.5 72.3a33.23 33.23 0 00-2.7 49.4l181.7 181.7-215.4 215.2a15.8 15.8 0 00-4.6 9.8l-3.4 37.2c-.9 9.4 6.6 17.4 15.9 17.4.5 0 1 0 1.5-.1l37.2-3.4c3.7-.3 7.2-2 9.8-4.6l215.4-215.4 181.7 181.7c6.5 6.5 15 9.7 23.5 9.7 9.7 0 19.3-4.2 25.9-12.4 56.3-70.3 79.7-158.3 70.2-243.4l161.1-161.1c12.9-12.8 12.9-33.8 0-46.8zM666.2 549.3l-24.5 24.5 3.8 34.4a259.92 259.92 0 01-30.4 153.9L262 408.8c12.9-7.1 26.3-13.1 40.3-17.9 27.2-9.4 55.7-14.1 84.7-14.1 9.6 0 19.3.5 28.9 1.6l34.4 3.8 24.5-24.5L608.5 224 800 415.5 666.2 549.3z"
                        />
                      </svg>
                    </span>
                  </span>
                  <!---->
                  <!---->
                </button>
                <button
                  class="ant-btn css-var-root ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-sm ant-btn-icon-only"
                  data-v-dfc8ebef=""
                  type="button"
                >
                  <span
                    class="ant-btn-icon"
                  >
                    <span
                      aria-label="info-circle"
                      class="anticon anticon-info-circle"
                      data-v-dfc8ebef=""
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="info-circle"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                        />
                        <path
                          d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
                        />
                      </svg>
                    </span>
                  </span>
                  <!---->
                  <!---->
                </button>
                <!---->
              </div>
            </div>
            <div
              class="ant-typography css-var-root"
              style="margin: 0px; font-size: 12px;"
            >
              Indicator element with width, height, font size, inline-block display, transition animation, transform origin, line height and color
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
            </div>
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`spin demo > renders basic correctly 1`] = `
<div
  aria-busy="true"
  aria-live="polite"
  class="ant-spin ant-spin-spinning ant-spin-section css-var-root"
>
  <span
    class="ant-spin-dot-holder"
  >
    <span
      class="ant-spin-dot ant-spin-dot-spin"
    >
      <i
        class="ant-spin-dot-item"
      />
      <i
        class="ant-spin-dot-item"
      />
      <i
        class="ant-spin-dot-item"
      />
      <i
        class="ant-spin-dot-item"
      />
    </span>
  </span>
  <!---->
  <!---->
  <!---->
</div>
`;

exports[`spin demo > renders custom-indicator correctly 1`] = `
<div
  class="ant-flex css-var-root ant-flex-align-center ant-flex-gap-middle"
>
  <div
    aria-busy="true"
    aria-live="polite"
    class="ant-spin ant-spin-sm ant-spin-spinning ant-spin-section css-var-root"
  >
    <span
      aria-label="loading"
      class="anticon anticon-loading anticon-spin ant-spin-dot"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="loading"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="0 0 1024 1024"
        width="1em"
      >
        <path
          d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"
        />
      </svg>
    </span>
    <!---->
    <!---->
  </div>
  <div
    aria-busy="true"
    aria-live="polite"
    class="ant-spin ant-spin-spinning ant-spin-section css-var-root"
  >
    <span
      aria-label="loading"
      class="anticon anticon-loading anticon-spin ant-spin-dot"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="loading"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="0 0 1024 1024"
        width="1em"
      >
        <path
          d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"
        />
      </svg>
    </span>
    <!---->
    <!---->
  </div>
  <div
    aria-busy="true"
    aria-live="polite"
    class="ant-spin ant-spin-lg ant-spin-spinning ant-spin-section css-var-root"
  >
    <span
      aria-label="loading"
      class="anticon anticon-loading anticon-spin ant-spin-dot"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="loading"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="0 0 1024 1024"
        width="1em"
      >
        <path
          d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"
        />
      </svg>
    </span>
    <!---->
    <!---->
  </div>
  <div
    aria-busy="true"
    aria-live="polite"
    class="ant-spin ant-spin-spinning ant-spin-section css-var-root"
  >
    <span
      aria-label="loading"
      class="anticon anticon-loading anticon-spin ant-spin-dot"
      role="img"
      style="font-size: 48px;"
    >
      <svg
        aria-hidden="true"
        data-icon="loading"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="0 0 1024 1024"
        width="1em"
      >
        <path
          d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"
        />
      </svg>
    </span>
    <!---->
    <!---->
  </div>
</div>
`;

exports[`spin demo > renders delay-and-debounce correctly 1`] = `
<div
  class="ant-flex css-var-root ant-flex-align-stretch ant-flex-gap-middle ant-flex-vertical"
>
  <div
    aria-busy="false"
    aria-live="polite"
    class="ant-spin css-var-root"
  >
    <!---->
    <div
      class="ant-spin-container"
    >
      <transition-stub
        appear="false"
        css="true"
        leaveactiveclass="ant-alert-motion-leave ant-alert-motion-leave-active"
        leavefromclass="ant-alert-motion-leave"
        leavetoclass="ant-alert-motion-leave ant-alert-motion-leave-active"
        name="ant-alert-motion"
        persisted="false"
      >
        <div
          class="ant-alert ant-alert-info ant-alert-with-description ant-alert-no-icon css-var-root"
          data-show="true"
          role="alert"
        >
          <!---->
          <div
            class="ant-alert-section"
          >
            <div
              class="ant-alert-title"
            >
              Alert message title
            </div>
            <div
              class="ant-alert-description"
            >
              Further details about the context of this alert.
            </div>
          </div>
          <!---->
          <!---->
        </div>
      </transition-stub>
    </div>
  </div>
  <div
    class="ant-flex css-var-root ant-flex-align-center ant-flex-gap-small"
  >
    <span>
      Loading state:
    </span>
    <button
      aria-checked="false"
      checked="false"
      class="ant-switch css-var-root"
      role="switch"
      type="button"
    >
      <div
        class="ant-switch-handle"
      >
        <!---->
      </div>
      <span
        class="ant-switch-inner"
      >
        <span
          class="ant-switch-inner-checked"
        >
          <!---->
        </span>
        <span
          class="ant-switch-inner-unchecked"
        >
          <!---->
        </span>
      </span>
    </button>
  </div>
</div>
`;

exports[`spin demo > renders fullscreen correctly 1`] = `
<div>
  <button
    class="ant-btn css-var-root ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
    type="button"
  >
    <transition-stub
      appear="false"
      css="true"
      name="ant-btn-loading-icon-motion"
      persisted="false"
    >
      <!---->
    </transition-stub>
    <span>
       Show fullscreen 
    </span>
    <!---->
  </button>
  <div
    aria-busy="false"
    aria-live="polite"
    class="ant-spin ant-spin-fullscreen css-var-root"
  >
    <!---->
    <!---->
  </div>
</div>
`;

exports[`spin demo > renders nested correctly 1`] = `
<div
  class="ant-flex css-var-root ant-flex-align-stretch ant-flex-gap-middle ant-flex-vertical"
>
  <div
    aria-busy="false"
    aria-live="polite"
    class="ant-spin css-var-root"
  >
    <!---->
    <div
      class="ant-spin-container"
    >
      <transition-stub
        appear="false"
        css="true"
        leaveactiveclass="ant-alert-motion-leave ant-alert-motion-leave-active"
        leavefromclass="ant-alert-motion-leave"
        leavetoclass="ant-alert-motion-leave ant-alert-motion-leave-active"
        name="ant-alert-motion"
        persisted="false"
      >
        <div
          class="ant-alert ant-alert-info ant-alert-with-description ant-alert-no-icon css-var-root"
          data-show="true"
          role="alert"
        >
          <!---->
          <div
            class="ant-alert-section"
          >
            <div
              class="ant-alert-title"
            >
              Alert message title
            </div>
            <div
              class="ant-alert-description"
            >
              Further details about the context of this alert.
            </div>
          </div>
          <!---->
          <!---->
        </div>
      </transition-stub>
    </div>
  </div>
  <div
    class="ant-flex css-var-root ant-flex-align-center ant-flex-gap-small"
  >
    <span>
      Loading state:
    </span>
    <button
      aria-checked="false"
      checked="false"
      class="ant-switch css-var-root"
      role="switch"
      type="button"
    >
      <div
        class="ant-switch-handle"
      >
        <!---->
      </div>
      <span
        class="ant-switch-inner"
      >
        <span
          class="ant-switch-inner-checked"
        >
          <!---->
        </span>
        <span
          class="ant-switch-inner-unchecked"
        >
          <!---->
        </span>
      </span>
    </button>
  </div>
</div>
`;

exports[`spin demo > renders percent correctly 1`] = `
<div
  class="ant-flex css-var-root ant-flex-align-center ant-flex-gap-middle"
>
  <button
    aria-checked="false"
    checked="false"
    class="ant-switch css-var-root"
    role="switch"
    type="button"
  >
    <div
      class="ant-switch-handle"
    >
      <!---->
    </div>
    <span
      class="ant-switch-inner"
    >
      <span
        class="ant-switch-inner-checked"
      >
        Auto
      </span>
      <span
        class="ant-switch-inner-unchecked"
      >
        Auto
      </span>
    </span>
  </button>
  <div
    aria-busy="true"
    aria-live="polite"
    class="ant-spin ant-spin-sm ant-spin-spinning ant-spin-section css-var-root"
  >
    <span
      class="ant-spin-dot-holder"
    >
      <span
        class="ant-spin-dot ant-spin-dot-spin"
      >
        <i
          class="ant-spin-dot-item"
        />
        <i
          class="ant-spin-dot-item"
        />
        <i
          class="ant-spin-dot-item"
        />
        <i
          class="ant-spin-dot-item"
        />
      </span>
    </span>
    <span
      class="ant-spin-dot-holder ant-spin-dot-progress ant-spin-dot-holder-hidden"
    >
      <svg
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="0"
        role="progressbar"
        viewBox="0 0 100 100"
      >
        <circle
          class="ant-spin-dot-circle ant-spin-dot-circle-bg"
          cx="50"
          cy="50"
          r="40"
          stroke-width="20"
        />
        <circle
          class="ant-spin-dot-circle"
          cx="50"
          cy="50"
          r="40"
          stroke-width="20"
          style="stroke-dashoffset: 62.83185307179586; stroke-dasharray: 0 251.32741228718342;"
        />
      </svg>
    </span>
    <!---->
    <!---->
  </div>
  <div
    aria-busy="true"
    aria-live="polite"
    class="ant-spin ant-spin-spinning ant-spin-section css-var-root"
  >
    <span
      class="ant-spin-dot-holder"
    >
      <span
        class="ant-spin-dot ant-spin-dot-spin"
      >
        <i
          class="ant-spin-dot-item"
        />
        <i
          class="ant-spin-dot-item"
        />
        <i
          class="ant-spin-dot-item"
        />
        <i
          class="ant-spin-dot-item"
        />
      </span>
    </span>
    <span
      class="ant-spin-dot-holder ant-spin-dot-progress ant-spin-dot-holder-hidden"
    >
      <svg
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="0"
        role="progressbar"
        viewBox="0 0 100 100"
      >
        <circle
          class="ant-spin-dot-circle ant-spin-dot-circle-bg"
          cx="50"
          cy="50"
          r="40"
          stroke-width="20"
        />
        <circle
          class="ant-spin-dot-circle"
          cx="50"
          cy="50"
          r="40"
          stroke-width="20"
          style="stroke-dashoffset: 62.83185307179586; stroke-dasharray: 0 251.32741228718342;"
        />
      </svg>
    </span>
    <!---->
    <!---->
  </div>
  <div
    aria-busy="true"
    aria-live="polite"
    class="ant-spin ant-spin-lg ant-spin-spinning ant-spin-section css-var-root"
  >
    <span
      class="ant-spin-dot-holder"
    >
      <span
        class="ant-spin-dot ant-spin-dot-spin"
      >
        <i
          class="ant-spin-dot-item"
        />
        <i
          class="ant-spin-dot-item"
        />
        <i
          class="ant-spin-dot-item"
        />
        <i
          class="ant-spin-dot-item"
        />
      </span>
    </span>
    <span
      class="ant-spin-dot-holder ant-spin-dot-progress ant-spin-dot-holder-hidden"
    >
      <svg
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="0"
        role="progressbar"
        viewBox="0 0 100 100"
      >
        <circle
          class="ant-spin-dot-circle ant-spin-dot-circle-bg"
          cx="50"
          cy="50"
          r="40"
          stroke-width="20"
        />
        <circle
          class="ant-spin-dot-circle"
          cx="50"
          cy="50"
          r="40"
          stroke-width="20"
          style="stroke-dashoffset: 62.83185307179586; stroke-dasharray: 0 251.32741228718342;"
        />
      </svg>
    </span>
    <!---->
    <!---->
  </div>
</div>
`;

exports[`spin demo > renders size correctly 1`] = `
<div
  class="ant-flex css-var-root ant-flex-align-center ant-flex-gap-middle"
>
  <div
    aria-busy="true"
    aria-live="polite"
    class="ant-spin ant-spin-sm ant-spin-spinning ant-spin-section css-var-root"
  >
    <span
      class="ant-spin-dot-holder"
    >
      <span
        class="ant-spin-dot ant-spin-dot-spin"
      >
        <i
          class="ant-spin-dot-item"
        />
        <i
          class="ant-spin-dot-item"
        />
        <i
          class="ant-spin-dot-item"
        />
        <i
          class="ant-spin-dot-item"
        />
      </span>
    </span>
    <!---->
    <!---->
    <!---->
  </div>
  <div
    aria-busy="true"
    aria-live="polite"
    class="ant-spin ant-spin-spinning ant-spin-section css-var-root"
  >
    <span
      class="ant-spin-dot-holder"
    >
      <span
        class="ant-spin-dot ant-spin-dot-spin"
      >
        <i
          class="ant-spin-dot-item"
        />
        <i
          class="ant-spin-dot-item"
        />
        <i
          class="ant-spin-dot-item"
        />
        <i
          class="ant-spin-dot-item"
        />
      </span>
    </span>
    <!---->
    <!---->
    <!---->
  </div>
  <div
    aria-busy="true"
    aria-live="polite"
    class="ant-spin ant-spin-lg ant-spin-spinning ant-spin-section css-var-root"
  >
    <span
      class="ant-spin-dot-holder"
    >
      <span
        class="ant-spin-dot ant-spin-dot-spin"
      >
        <i
          class="ant-spin-dot-item"
        />
        <i
          class="ant-spin-dot-item"
        />
        <i
          class="ant-spin-dot-item"
        />
        <i
          class="ant-spin-dot-item"
        />
      </span>
    </span>
    <!---->
    <!---->
    <!---->
  </div>
</div>
`;

exports[`spin demo > renders style-class correctly 1`] = `
<div
  class="ant-flex css-var-root ant-flex-align-center ant-flex-gap-middle"
>
  <div
    aria-busy="true"
    aria-live="polite"
    class="ant-spin ant-spin-spinning demo-spin-root ant-spin-section css-var-root"
  >
    <span
      class="ant-spin-dot-holder"
      style="color: rgb(0, 212, 255);"
    >
      <span
        class="ant-spin-dot ant-spin-dot-spin"
      >
        <i
          class="ant-spin-dot-item"
        />
        <i
          class="ant-spin-dot-item"
        />
        <i
          class="ant-spin-dot-item"
        />
        <i
          class="ant-spin-dot-item"
        />
      </span>
    </span>
    <!---->
    <!---->
    <!---->
  </div>
  <div
    aria-busy="true"
    aria-live="polite"
    class="ant-spin ant-spin-sm ant-spin-spinning demo-spin-root ant-spin-section css-var-root"
  >
    <span
      class="ant-spin-dot-holder"
      style="color: rgb(114, 46, 209);"
    >
      <span
        class="ant-spin-dot ant-spin-dot-spin"
      >
        <i
          class="ant-spin-dot-item"
        />
        <i
          class="ant-spin-dot-item"
        />
        <i
          class="ant-spin-dot-item"
        />
        <i
          class="ant-spin-dot-item"
        />
      </span>
    </span>
    <!---->
    <!---->
    <!---->
  </div>
</div>
`;

exports[`spin demo > renders tip correctly 1`] = `
<div
  class="ant-flex css-var-root ant-flex-align-stretch ant-flex-gap-middle ant-flex-vertical"
>
  <div
    class="ant-flex css-var-root ant-flex-gap-middle"
  >
    <div
      aria-busy="true"
      aria-live="polite"
      class="ant-spin ant-spin-sm ant-spin-spinning css-var-root"
    >
      <div
        class="ant-spin-section"
      >
        <span
          class="ant-spin-dot-holder"
        >
          <span
            class="ant-spin-dot ant-spin-dot-spin"
          >
            <i
              class="ant-spin-dot-item"
            />
            <i
              class="ant-spin-dot-item"
            />
            <i
              class="ant-spin-dot-item"
            />
            <i
              class="ant-spin-dot-item"
            />
          </span>
        </span>
        <!---->
        <div
          class="ant-spin-description"
        >
          Loading
        </div>
      </div>
      <div
        class="ant-spin-container"
      >
        <div
          style="padding: 50px; background: rgba(0, 0, 0, 0.05); border-radius: 4px;"
        />
      </div>
    </div>
    <div
      aria-busy="true"
      aria-live="polite"
      class="ant-spin ant-spin-spinning css-var-root"
    >
      <div
        class="ant-spin-section"
      >
        <span
          class="ant-spin-dot-holder"
        >
          <span
            class="ant-spin-dot ant-spin-dot-spin"
          >
            <i
              class="ant-spin-dot-item"
            />
            <i
              class="ant-spin-dot-item"
            />
            <i
              class="ant-spin-dot-item"
            />
            <i
              class="ant-spin-dot-item"
            />
          </span>
        </span>
        <!---->
        <div
          class="ant-spin-description"
        >
          Loading
        </div>
      </div>
      <div
        class="ant-spin-container"
      >
        <div
          style="padding: 50px; background: rgba(0, 0, 0, 0.05); border-radius: 4px;"
        />
      </div>
    </div>
    <div
      aria-busy="true"
      aria-live="polite"
      class="ant-spin ant-spin-lg ant-spin-spinning css-var-root"
    >
      <div
        class="ant-spin-section"
      >
        <span
          class="ant-spin-dot-holder"
        >
          <span
            class="ant-spin-dot ant-spin-dot-spin"
          >
            <i
              class="ant-spin-dot-item"
            />
            <i
              class="ant-spin-dot-item"
            />
            <i
              class="ant-spin-dot-item"
            />
            <i
              class="ant-spin-dot-item"
            />
          </span>
        </span>
        <!---->
        <div
          class="ant-spin-description"
        >
          Loading
        </div>
      </div>
      <div
        class="ant-spin-container"
      >
        <div
          style="padding: 50px; background: rgba(0, 0, 0, 0.05); border-radius: 4px;"
        />
      </div>
    </div>
  </div>
  <div
    aria-busy="true"
    aria-live="polite"
    class="ant-spin ant-spin-spinning css-var-root"
  >
    <div
      class="ant-spin-section"
    >
      <span
        class="ant-spin-dot-holder"
      >
        <span
          class="ant-spin-dot ant-spin-dot-spin"
        >
          <i
            class="ant-spin-dot-item"
          />
          <i
            class="ant-spin-dot-item"
          />
          <i
            class="ant-spin-dot-item"
          />
          <i
            class="ant-spin-dot-item"
          />
        </span>
      </span>
      <!---->
      <div
        class="ant-spin-description"
      >
        Loading...
      </div>
    </div>
    <div
      class="ant-spin-container"
    >
      <transition-stub
        appear="false"
        css="true"
        leaveactiveclass="ant-alert-motion-leave ant-alert-motion-leave-active"
        leavefromclass="ant-alert-motion-leave"
        leavetoclass="ant-alert-motion-leave ant-alert-motion-leave-active"
        name="ant-alert-motion"
        persisted="false"
      >
        <div
          class="ant-alert ant-alert-info ant-alert-with-description ant-alert-no-icon css-var-root"
          data-show="true"
          role="alert"
        >
          <!---->
          <div
            class="ant-alert-section"
          >
            <div
              class="ant-alert-title"
            >
              Alert message title
            </div>
            <div
              class="ant-alert-description"
            >
              Further details about the context of this alert.
            </div>
          </div>
          <!---->
          <!---->
        </div>
      </transition-stub>
    </div>
  </div>
</div>
`;
